--- a/style.css
+++ b/style.css
@@ -241,6 +241,7 @@ header .section-container {
     align-items: center;
     justify-content: space-between;
     padding: 56px 80px;
+    border-radius: 8px;
 }
 
 footer p {
